# BT_DML

./: README.md  pyproject.toml
Real-life_Data/: KNN.py  MLR.py  Random_Forest.py  XGBoost.py  opt_params_knn.pkl  opt_params_rf.pkl  opt_params_xgb.pkl  result_visualize.ipynb  results_knn.pkl  results_mlr.pkl  results_rf.pkl  results_xgb.pkl
Real-life_Data/data/: 401k.csv
Simple_Model/Archive/Elastic_Net-Failed/: Elastic_Net_hyperparameters.py  MC_simulation.py  dml_algorithm.py  opt_params_eln.pkl  param_tune_test.ipynb  results_eln.pkl
Simple_Model/KNN/: KNN.py  KNN_hyperparameters.py  MC_simulation.py  opt_params_knn.pkl  param_tune_test.ipynb  results_knn.pkl
Simple_Model/MLR/: MC_simulation.py  data_generation.py  mlr.py  param_tune_test.ipynb  results_mlr.pkl
Simple_Model/Random_Forest/: MC_simulation.py  Random_Forest_hyperparameters.py  dml_algorithm.py  opt_params_rf.pkl  param_tune_test.ipynb  results_rf.pkl
Simple_Model/XGBoost/: MC_simulation.py  XGBoost_hyperparameters.py  opt_params_xgb.pkl  param_tune_test.ipynb  results_xgb.pkl
Simulation_Design/: result_visualize.ipynb
Simulation_Design/KNN/: KNN.py  KNN_hyperparameters.py  MC_simulation.py  opt_params_knn.pkl  results_knn.pkl
Simulation_Design/MLR/: MC_simulation.py  MLR.py  results_mlr.pkl
Simulation_Design/Random_Forest/: MC_simulation.py  Random_Forest_hyperparameters.py  opt_params_rf.pkl  results_rf.pkl
Simulation_Design/XGBoost/: MC_simulation.py  XGBoost_hyperparameters.py  data_generation.py  dml_algorithm.py  opt_params_xgb.pkl  results_xgb.pkl
(+5 files in other folders)
